# zipa-cluster

./: README.md  notes.txt  pyproject.toml  runner.bash
client/: Makefile  ansible.cfg  exchange_playbook.yaml  install_playbook.yaml  install_stage_2_playbook.yaml  inventory.ini  network_reconfig_stage_2_playbook.yaml  playbook.yaml  refresh_playbook.yaml  run.bash  switch_networks_playbook.yaml  test_nas.yaml
client/files/: client.conf  network.sh  requirements.txt  vars  zipa-avahi.service  zipa-systemd.service
client/group_vars/all/: vars.yaml
client/playbooks/: install_playbook.yaml  refresh_playbook.yaml
client/tasks/: alias.yaml  certificate.yaml  cron.yaml  crt-key-exchange.yaml  delete.yaml  easy-rsa-stage-2.yaml  easy-rsa.yaml  filesystem.yaml  hostname.yaml  install-py-utils.yaml  install.yaml  install_stage_2_playbook.yaml  login_vars.yaml  mac-address.yaml  openvpn.yaml  reboot.yaml  reconfigure-network.yaml  runner.yaml  services.yaml  setup.yaml  testbed.yaml  time-check.yaml  tunnel-addresses.yaml  update.yaml
server/: ansible.cfg  install_playbook.yaml  install_stage_2_playbook.yaml  inventory.ini  makefile  third-party-ca.yaml
server/files/: 00-installer-config.yaml  openvpn_up  server.conf
server/group_vars/all/: vars.yaml
server/tasks/: cluster.yaml  easy-rsa-stage-2.yaml  easy-rsa.yaml  filesystem.yaml  install-sys-utils.yaml  openvpn-stage-1.yaml  openvpn-stage-2.yaml  openvpn.yaml
