[tool.poetry]
name = "zipa-cluster"
version = "0.1.0"
description = ""
authors = ["Isaac Ahlgren <iahlgren@luc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.26.3"
zeroconf = "0.131.0"
scipy = "1.11.4"
cryptography = "41.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
